--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-      "illuminate/support": "^5.5",
+      "illuminate/support": "^5.5|^7.0",
       "predis/predis": "^1.1",
       "php" : "^7.0"
     },
