upgrade to support Laravel 10

--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
   "name": "potelo/laravel-block-bots",
-  "description": "Block bots and high traffic offenders using Redis",
+  "description": "Block bots and high traffic offenders using Redis. This is forked from Potelo/laravel-block-bots to make it support Laravel 10",
   "authors": [
     {
-      "name": "Bruno Cabral",
-      "email": "bruno@potelo.com.br"
+      "name": "Dzung Nguyen",
+      "email": "dungnh@gmail.com"
     }
   ],
   "scripts": {
     "test": "XDEBUG_MODE=coverage phpunit --coverage-text"
   },
   "require": {
-    "php" : "^7.1 || ^8.0",
-    "laravel/framework": "^5.5|^6.0|^7.0|^8.0|^9.0",
+    "php" : "^7.1 || ^8.0 || ^8.1",
+    "laravel/framework": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0",
     "predis/predis": "^1.1",
     "guzzlehttp/guzzle": "^7.5.0",
     "ext-json": "*"
