feat: add support for PHP 8.3, 8.4 and Laravel 11
- Update composer.json to support PHP ^8.3 and ^8.4
- Add Laravel 11 (^11.0) compatibility
- Tested compatibility with PHP 8.3 and 8.4 in Docker environment
- All tests passing on PHP 8.2, 8.3, and 8.4 (with deprecation notices)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,13 @@ on: [push, pull_request]
 jobs:
   phpunit-tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: ['8.2', '8.3', '8.4']
     steps:
       - uses: actions/checkout@v3
+      - name: Update PHP version in Dockerfile
+        run: sed -i "s/FROM php:8.2-cli/FROM php:${{ matrix.php }}-cli/" Dockerfile
       - name: Build container
         run: docker-compose build
       - name: Install dependencies
