--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   },
   "require": {
     "php" : "^7.1 || ^8.0 || ^8.1 || ^8.2 || ^8.3 || ^8.4",
-    "laravel/framework": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+    "laravel/framework": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0",
     "predis/predis": "^2.2",
     "guzzlehttp/guzzle": "^7.5.0",
     "ext-json": "*"
